--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
 # Dependency directories
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+wheels/
+pip-wheel-metadata/
+dbs/
+logs/
+project.egg-info/
+setup.py
 
 # macOS
 .DS_Store
